package protocol;


message MoveInfo
{
  required float positionX = 1;
  required float positionY = 2;
  required int32 face = 3; //面部朝向(0代表看向右边(默认),1代表看向左边)
  required float direction = 4; //人物移动方向(0右,90下,-90上,180左)
}

message StopInfo
{
  required float positionX = 1;
  required float positionY = 2;
  required int32 face = 3; //面部朝向(0代表看向右边(默认),1代表看向左边)
}

message JumpInfo
{
  required float positionX = 1;
  required float positionY = 2;
  required float highestPosX = 3;
  required float highestPosY = 4;
  required float finalPosX = 5;
  required float finalPosY = 6;
  required float face = 7;//面部朝向(0代表看向右边(默认),1代表看向左边)
}

//玩家进入场景
message CS10030
{
  required int64 sceneId = 1;
}

//返回玩家进入场景
message SC10030
{
  required int64 sceneId = 1;
}


//玩家退出场景
message CS10031
{
  required int64 sceneId = 1;
}

//返回玩家退出场景
message SC10031
{
  required int64 playerId = 1;
}

//玩家移动
message CS10032
{
  required MoveInfo moveInfo = 1;
}

//返回玩家移动
message SC10032
{
  required int64 organismId = 1;
  required MoveInfo moveInfo = 2;
}

//玩家停止移动
message CS10033
{
  required StopInfo stopInfo = 1;
}

//返回玩家停止移动
message SC10033
{
  required int64 organismId = 1;
  required StopInfo stopInfo = 2;
}

//返回创建某实体
message SC10034
{
  required int64 organismId = 1;
  required int32 organismType = 2; //1->player,2->boss
  required float positionX = 3;
  required float positionY = 4;
  required int32 face = 5;
}

//玩家跳跃
message CS10035
{
  required JumpInfo jumpInfo = 1;
}

//返回玩家跳跃
message SC10035{
  required int64 organismId = 1;
  required JumpInfo jumpInfo = 2;
}